@@ -40,6 +40,9 @@ Version 2.1.1
    - Bugfix: Segfaulting in SSL when writing to a closed socket
    - Cleanup of code for obtaining the password for distant mailboxes
    - Cleanup of code for checking for new mails (IMAP4)
+   - Bugfix: Ignore signal that interrupts socket reads (thanks to Byron
+        Foster for providing a patch)
+   - Bugfix: Some error handling was only done when debugging was activated
 
 Version 2.1.0
  * Nicolas Rougier
